# NebulaId

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  IFLOW.md  Makefile  README.md  README.vercel.md  README_zh.md  USER_GUIDE.md  api_test.sh  comprehensive_api_test_v3.sh  config.toml  config.yaml  config_no_etcd.toml  deny.toml  deploy_vercel.sh  docker-compose.yml  lefthook.yml  prometheus.yml  requirements.db  test_api.sh  test_api_final.sh  test_api_v2.sh  test_results_20260104_011314.txt
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-review.yml  codeql.yml  health-check.yml  release.yml
api/: Cargo.toml  index.rs
benches/: i18n.rs
config/: README_TEST_CONFIG.md  config.toml  config_no_etcd.toml  config_test.toml  test_config.toml
crates/: .gitignore
crates/client/: Cargo.toml
crates/core/: Cargo.toml
crates/core/benches/: benchmarks.rs
crates/core/src/: algorithm_router.rs  auth.rs  config_management.rs  dynamic_config.rs  lib.rs  monitoring.rs  workspace_config.rs
crates/core/src/algorithm/: audit_trait.rs  circuit_breaker.rs  degradation_manager.rs  mod.rs  router.rs  segment.rs  snowflake.rs  traits.rs  uuid_v7.rs
crates/core/src/cache/: mod.rs  multi_level_cache.rs  redis_cache.rs  redis_integration_test.rs  ring_buffer.rs
crates/core/src/config/: config.rs  mod.rs
crates/core/src/container/: app_container.rs  mod.rs
crates/core/src/coordinator/: etcd_cluster_health.rs  etcd_worker_allocator.rs  mod.rs
crates/core/src/database/: api_key_entity.rs  biz_tag_entity.rs  connection.rs  group_entity.rs  mod.rs  repository.rs  segment_entity.rs  workspace_entity.rs
crates/core/src/infrastructure/: cache_adapter.rs  config_adapter.rs  config_provider.rs  database_adapter.rs  mod.rs
crates/core/src/tests/: degradation_tests.rs  dynamic_step_tests.rs  integration_tests.rs  mod.rs
crates/core/src/types/: error.rs  id.rs  metrics.rs  mod.rs
crates/server/: Cargo.toml  LICENSE  build.rs
crates/server/src/: api_version.rs  audit.rs  audit_middleware.rs  config_hot_reload.rs  config_management.rs  cors_config.rs  error_handler.rs  grpc.rs  lib.rs  main.rs  middleware.rs  models.rs  openapi.rs  rate_limit.rs  rate_limit_middleware.rs  router.rs  server_config.rs  tls_server.rs
crates/server/src/handlers/: mock_generator.rs  mod.rs  mod.rs.backup_1767795433  mod.rs.bak2  mod.rs.bak3
crates/server/src/middleware/: mod.rs  size_limit.rs  utils.rs
crates/server/src/proto/: mod.rs
docker/: .env.example  Dockerfile  Dockerfile.local  deploy.sh  docker-compose.yml  run_tests.sh  test-server-config.toml  test_api.sh  test_batch_validation.sh  test_config.toml  test_grpc_port.sh
docker/test_reports/: combined_test_20260102_165953.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIG_MIGRATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  OPENSPEC_TEST_SECURITY.md  USER_GUIDE.md  errata.md  prd.md  task.md  tdd.md  test.md  uat.md
docs/archive/: OPENSPEC_FIXES.md  test.md
grafana/dashboards/: nebula_id.json
locales/: en.yml  zh-CN.yml
protos/: nebula_id.proto
scripts/: _deploy_impl.sh  _install_hooks_impl.sh  _pre_commit_impl.sh  _redis_test_impl.sh  init.sql  install-pre-commit-hooks.sh  pre-commit-check.sh  run.sh  test_api.py  test_api.sh
src/: build.rs  lib.rs  main.rs
src/core/: algorithm_router.rs  i18n.rs  mod.rs
src/core/algorithm/: audit_trait.rs  circuit_breaker.rs  degradation_manager.rs  router.rs  segment.rs  snowflake.rs  traits.rs  uuid_v7.rs
src/core/auth/: manager.rs  mod.rs
src/core/cache/: mod.rs
src/core/config/: algorithm.rs  app.rs  app_config.rs  auth.rs  batch.rs  dynamic.rs  environment.rs  error.rs  logging.rs  management.rs  mod.rs  monitoring.rs  rate_limit.rs  redis.rs  tls.rs  workspace.rs
src/core/container/: app_container.rs  mod.rs
src/core/coordinator/: etcd.rs  etcd_cluster_health.rs  etcd_worker_allocator.rs  local.rs  mod.rs
src/core/database/: api_key_entity.rs  biz_tag_entity.rs  connection.rs  group_entity.rs  mod.rs  repository.rs  segment_entity.rs  workspace_entity.rs
src/core/monitoring/: core.rs  mod.rs
src/core/tests/: algorithm_e2e_tests.rs  auth_handlers_e2e_tests.rs  cache_tests.rs  coordinator_auth_e2e_tests.rs  degradation_tests.rs  dynamic_step_tests.rs  grpc_monitoring_e2e_tests.rs  infra_e2e_tests.rs  integration_tests.rs  mod.rs  remaining_e2e_tests.rs  segment_monitoring_e2e_tests.rs  server_layer_e2e_tests.rs  supporting_layer_e2e_tests.rs
src/core/types/: error.rs  id.rs  metrics.rs  mod.rs  segment_info.rs
src/infrastructure/: cache_adapter.rs  config_adapter.rs  config_provider.rs  database_adapter.rs  mod.rs
src/infrastructure/repositories/: mod.rs
src/server/: api_version.rs  error_handler.rs  grpc.rs  mod.rs  models.rs  openapi.rs  router.rs  sdforge_adapter.rs
src/server/audit/: logger.rs  middleware.rs  mod.rs
src/server/auth/: memory_dao.rs  mod.rs
src/server/config/: cors.rs  hot_reload.rs  management.rs  mod.rs  server.rs  tls.rs
src/server/handlers/: api_key_handlers.rs  biz_tag_handlers.rs  helpers.rs  id_handlers.rs  mock_generator.rs  mod.rs  system_handlers.rs  workspace_handlers.rs
src/server/middleware/: api_key_auth.rs  locale.rs  mod.rs  size_limit.rs  utils.rs
src/server/proto/: mod.rs
src/server/proto/nebula/id/v1/: nebula.id.v1.rs  nebula.id.v1.tonic.rs
src/server/rate_limit/: limiter.rs  middleware.rs  mod.rs
tests/: api_test.sh  db_concurrency_test.sh  degradation_test.sh  distributed_test.sh  i18n_e2e.rs  lib.sh  test_all_algorithms.sh  test_batch_performance.sh  test_db_concurrency.sh
tools/code_review/: Cargo.toml
tools/code_review/src/: lib.rs  main.rs
