[package]
name = "nebulaid"
version = "0.2.0"
description = "Enterprise-grade distributed ID generation system"
authors = ["Kirky.X"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kirky-X/NebulaId"
homepage = "https://github.com/Kirky-X/NebulaId"
keywords = ["distributed", "id-generator", "snowflake", "uuid"]
categories = ["development-tools", "database"]

[lib]
name = "nebulaid"
path = "src/lib.rs"

[[bin]]
name = "nebula-id"
path = "src/main.rs"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14"

[features]
default = ["postgresql", "http", "grpc"]
postgresql = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]
etcd = ["dep:etcd-client"]
# integration-tests: 门控需要真实数据库的 #[ignore] 集成测试
integration-tests = []
# sdforge 宏在 #[forge] 展开时 emit #[cfg(feature = "http"/"grpc")]，
# 这里声明空镜像 feature 使其在 nebulaid crate 上下文中求值为 true
http = []
grpc = []

# sdforge 宏还 emit 其他内部 feature 的 cfg gate，声明为已知 cfg 值以消除 check-cfg 警告
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("http", "grpc", "cli", "mcp", "openapi", "websocket", "streaming", "cache", "logging", "inklog", "i18n", "security", "ratelimit", "ratelimit-http", "docs", "limiteron-integration", "kit"))',
] }

[dependencies]
# 外部组件（基础设施层）
confers = "0.4"
oxcache = "0.3"
dbnexus = { version = "0.4", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
sdforge = { version = "0.4", default-features = false, features = ["http", "grpc"] }

# 工具
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Web 框架
axum = { version = "0.8", features = ["json", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "timeout", "limit", "trace", "set-header"] }

# OpenAPI 文档
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

# gRPC / Protobuf
tonic = { version = "0.14", features = ["tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"

# 分布式协调
etcd-client = { version = "0.17", optional = true }

# 缓存与存储
parking_lot = "0.12"

# 数据库（dbnexus 接管连接管理，sea-orm 仍用于 ORM 查询）
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "with-chrono", "with-uuid", "postgres-array"] }
sqlx = { version = "0.8", default-features = false, optional = true, features = ["runtime-tokio", "tls-rustls", "uuid", "chrono"] }

# 日志追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# 工具库
uuid = { version = "1.22", features = ["v4", "v7", "v8", "serde"] }
chrono = { version = "0.4", features = ["std"] }
hex = "0.4"
base64 = "0.21"
sha2 = "0.11"
getrandom = "0.2"
rand = "0.10"
subtle = "2.5"
# Argon2id 用于 API key 密钥哈希（CWE-916 修复）
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
regex = "1"
toml = "1.1"
reqwest = { version = "0.13", features = ["json"] }
validator = { version = "0.20", features = ["derive"] }
serde_with = "3"
config = "0.15"

# 错误处理
anyhow = "1.0"

# 加密
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# 基础组件
arc-swap = "1.6"
smallvec = "1"
url = "2"

# 速率限制和流量控制
limiteron = { version = "0.2", default-features = false, features = ["postgres", "quota-control", "ban-manager"] }

# 国际化（default-features = false 禁用 accept-language，项目自带更严格的 RFC 7231 解析）
rust-i18n = { version = "3.1", default-features = false }

[dev-dependencies]
mockall = "0.13"
sea-orm = { version = "1.1", features = ["mock"] }
tempfile = "3"
reqwest = { version = "0.13", features = ["json"] }
criterion = { version = "0.5", default-features = false }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

[[bench]]
name = "i18n"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"

[profile.dev]
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 0

[profile.bench]
opt-level = 3
lto = true
