[package]
name = "nebulaid"
version = "0.2.0"
description = "Enterprise-grade distributed ID generation system"
authors = ["Kirky.X"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kirky-X/NebulaId"
homepage = "https://github.com/Kirky-X/NebulaId"
keywords = ["distributed", "id-generator", "snowflake", "uuid"]
categories = ["development-tools", "database"]

[lib]
name = "nebulaid"
path = "src/lib.rs"

[[bin]]
name = "nebula-id"
path = "src/main.rs"

[features]
default = ["postgresql", "http", "grpc"]
postgresql = ["dbnexus/postgres"]
sqlite = ["dbnexus/sqlite"]
etcd = ["dep:etcd-client"]
# integration-tests: 门控需要真实数据库的 #[ignore] 集成测试
integration-tests = []
# sdforge 宏在 #[forge] 展开时 emit #[cfg(feature = "http"/"grpc")]，
# 这里声明空镜像 feature 使其在 nebulaid crate 上下文中求值为 true
http = []
grpc = []

# sdforge 宏还 emit 其他内部 feature 的 cfg gate，声明为已知 cfg 值以消除 check-cfg 警告
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("http", "grpc", "cli", "mcp", "openapi", "websocket", "streaming", "cache", "logging", "inklog", "i18n", "security", "ratelimit", "ratelimit-http", "docs", "limiteron-integration", "kit"))',
] }

[dependencies]
# 外部组件（基础设施层）
confers = "0.4"
oxcache = "0.3"
dbnexus = { version = "0.4", default-features = false, features = ["runtime-tokio-rustls", "with-chrono", "with-uuid"] }
sdforge = { version = "0.4", default-features = false, features = ["http", "grpc", "openapi"] }
inklog = { version = "0.1", default-features = false }
trait-kit = { version = "0.3", default-features = false, features = ["async"] }

# 工具
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Web 框架
# axum / tower-http 直接依赖：sdforge 0.4.6 仅 re-export axum 的部分类型（extract/routing/serve 等），
# Router/middleware/body::Bytes/response::Response 等类型未 re-export；tower-http 完全未 re-export。
# 版本与 sdforge 0.4.6 的依赖（axum ~0.8 / tower-http ~0.7）保持一致，不增加额外编译。
axum = { version = "0.8", default-features = false, features = ["tokio", "json"] }
tower-http = { version = "0.7", default-features = false, features = ["cors", "limit", "set-header"] }

# gRPC / Protobuf（通过 sdforge::tonic / sdforge::prost re-export使用）
# tonic 直接依赖（仅启用 tls-ring feature）：sdforge 0.4.6 re-export tonic 时未启用 TLS，
# 而 src/server/config/tls.rs 需要 ServerTlsConfig/Certificate/Identity（gated by _tls-any）。
# tls-ring 与项目 rcgen 的 ring crypto provider 保持一致；transport/server feature 由
# sdforge 的 grpc feature 间接启用，此处不重复声明。
tonic = { version = "0.14", default-features = false, features = ["tls-ring"] }

# Derive 宏直接依赖：以下 crate 的 derive 宏（OpenApi/ToSchema/Message/DeriveEntityModel 等）
# 展开时生成 `::crate_name::` 绝对路径，Rust 2018+ 要求这些 crate 在 extern prelude 中
# 可见（即必须是直接依赖）。实际 API 仍通过 sdforge/dbnexus re-export 使用。
#
# 注：derive 宏（如 `#[derive(ToSchema)]`）必须走直接依赖（生成 `::utoipa::` 路径）；
# 而属性宏（如 `#[utoipa::path(...)]`）通过 `#[sdforge::utoipa::path(...)]` 形式调用，
# 因为属性宏的展开只依赖宏注册表路径解析，不受 extern prelude 限制。两者并存是
# Rust 宏系统的固有特性，非冗余声明。
utoipa = { version = "5.0", default-features = false, features = ["macros", "uuid", "chrono"] }
prost = { version = "0.14", default-features = false, features = ["derive"] }
sea-orm = { version = "2.0", default-features = false, features = ["macros", "with-json", "with-uuid", "with-chrono"] }
tonic-prost = { version = "0.14", default-features = false }

# 分布式协调
etcd-client = { version = "0.17", optional = true }

# 缓存与存储
parking_lot = "0.12"

# 数据库（完全由 dbnexus 接管，sea-orm 通过 dbnexus::sea_orm re-export使用）

# 日志追踪（tracing-subscriber 由 inklog 间接引入，日志初始化通过 inklog 接管）
tracing = "0.1"

# 工具库
uuid = { version = "1.22", features = ["v4", "v7", "v8", "serde"] }
chrono = { version = "0.4", features = ["std"] }
hex = "0.4"
base64 = "0.21"
sha2 = "0.11"
getrandom = "0.2"
rand = "0.10"
subtle = "2.5"
# Argon2id 用于 API key 密钥哈希（CWE-916 修复）
# std feature 启用 rand_core/getrandom 支持，OsRng 可用
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash", "std"] }
regex = "1.0"
reqwest = { version = "0.13", features = ["json"] }
validator = { version = "0.20", features = ["derive"] }
serde_with = "3.0"

# 错误处理
anyhow = "1.0"

# 加密
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

# 基础组件
arc-swap = "1.6"
smallvec = "1.0"
url = "2.0"

# 速率限制和流量控制
limiteron = { version = "0.2", default-features = false, features = ["postgres", "quota-control", "ban-manager"] }

# 国际化（default-features = false 禁用 accept-language，项目自带更严格的 RFC 7231 解析）
rust-i18n = { version = "3.1", default-features = false }

[dev-dependencies]
mockall = "0.13"
sea-orm = { version = "2.0", default-features = false, features = ["mock"] }
tempfile = "3.0"
reqwest = { version = "0.13", features = ["json"] }
criterion = { version = "0.5", default-features = false }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
# toml 仅用于测试中序列化 Config 为 TOML 字符串（confers 不提供序列化功能）
toml = { version = "1.1", default-features = false, features = ["std", "serde"] }
# tower 直接依赖（仅测试用）：sdforge 0.4.6 未 re-export tower crate。
# 版本与 sdforge 0.4.6 的依赖（~0.5）保持一致。
# tower-http 已在 [dependencies] 中声明（主代码使用），此处不再重复。
tower = { version = "0.5", default-features = false, features = ["util"] }

[[bench]]
name = "i18n"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"

[profile.dev]
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 0

[profile.bench]
opt-level = 3
lto = true
