[package]
name = "nebula-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index"
path = "index.rs"

[dependencies]
vercel_runtime = "1.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
nebula-server = { path = "../crates/server" }
nebula-core = { path = "../crates/core" }
anyhow = "1.0"
axum = "0.8"
tower = "0.4"
http = "1.0"
