[package]
name = "nebula-client"
version = "0.1.0"
edition = "2021"
description = "Nebula ID generation client library"
authors = ["Tech Team"]

[features]
default = ["http"]
http = ["reqwest"]
grpc = ["tonic"]

[dependencies]
nebula-core = { path = "../core" }

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
tonic = { version = "0.14", features = ["tls-native-roots"], optional = true }
prost = "0.13"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
