[package]
name = "nebula-core"
version = "0.1.0"
edition = "2021"
description = "Core ID generation algorithms and types"
authors = ["Tech Team"]

[features]
default = []
etcd = ["dep:etcd-client"]

[dependencies]
arc-swap = "1.6"
async-trait = "0.1"
base64 = "0.21"
bytes = "1"
chrono = { version = "0.4", features = ["std"] }
crc32fast = "1"
crossbeam = "0.8"
dashmap = "6"
derive_more = { version = "1", features = ["display", "error", "from"] }
either = "1"
etcd-client = { version = "0.17", optional = true }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
parking_lot = "0.12"
pin-project = "1.1"
prost = "0.14"
prost-types = "0.14"
prometheus-client = "0.22"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "with-chrono", "with-uuid", "sqlx-sqlite"] }
sea-orm-migration = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "v7", "v8", "serde"] }
validator = { version = "0.20", features = ["derive"] }
winnow = "0.5"

[dev-dependencies]
mockall = "0.13"
proptest = "1.4"
quickcheck = "1"
sea-orm = { version = "1.1", features = ["mock"] }
tokio = { version = "1", features = ["test-util"] }
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
