[package]
name = "nebula-core"
edition = "2021"
license.workspace = true

[features]
default = ["postgresql"]
postgresql = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]
etcd = ["dep:etcd-client"]

[dependencies]
# 外部组件（基础设施层）
confers = { workspace = true }
oxcache = { workspace = true }
dbnexus = { workspace = true }

# 工具
async-trait = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# 异步运行时
tokio = { workspace = true }
futures = { workspace = true }

# Web 框架
tower = { workspace = true }

# gRPC / Protobuf
prost = { workspace = true }
prost-types = { workspace = true }

# 分布式协调
etcd-client = { workspace = true, optional = true }

# 缓存与存储
redis = { workspace = true }
parking_lot = { workspace = true }

# 数据库
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "with-chrono", "with-uuid", "postgres-array"] }
sea-orm-migration = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, default-features = false }

# 监控与指标
prometheus-client = { workspace = true }

# 日志追踪
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 工具库
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
validator = { workspace = true }
winnow = { workspace = true }

# 基础组件
arc-swap = { workspace = true }
crossbeam = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
either = { workspace = true }
pin-project = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
quickcheck = { workspace = true }
sea-orm = { version = "1.1", features = ["mock"] }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
