[package]
name = "nebula-server"
version = "0.1.0"
edition = "2021"
description = "Nebula ID generation server"
authors = ["Tech Team"]

[[bin]]
name = "nebula-id"
path = "src/main.rs"

[build-dependencies]
tonic-prost-build = "0.14"

[dependencies]
tonic-prost = "0.14"
nebula-core = { path = "../core" }

axum = { version = "0.8", features = ["json", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "timeout", "limit", "trace", "set-header"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2"
futures-util = "0.3"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
etcd-client = "0.17"
uuid = { version = "1", features = ["v4", "v7", "v8"] }

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
config = "0.14"

clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
subtle = "2"

prometheus = "0.14"

derive_more = { version = "1", features = ["display", "error", "from"] }

humantime = "2"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
chrono = { version = "0.4", features = ["std"] }
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
