[package]
name = "nebula-server"
edition = "2021"

[[bin]]
name = "nebula-id"
path = "src/main.rs"

[features]
default = ["postgresql"]
postgresql = ["nebula-core/postgresql", "sqlx/postgres"]
sqlite = ["nebula-core/sqlite", "sqlx/sqlite"]
etcd = ["dep:etcd-client", "nebula-core/etcd"]

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }

[dependencies]
# 核心库
nebula-core = { path = "../core", default-features = false }

# Web 框架
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# 异步运行时
tokio = { workspace = true }
tokio-stream = "0.1"
futures-util = { workspace = true }

# gRPC / Protobuf
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

# 分布式协调
etcd-client = { workspace = true, optional = true }

# 缓存与存储
redis = { workspace = true }
dashmap = { workspace = true }

# 数据库
sqlx = { workspace = true, default-features = false }

# 监控与指标
prometheus = { workspace = true }

# 日志追踪
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# 工具库
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }

# 命令行
clap = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 验证
validator = { workspace = true }

# 认证
authrs = { workspace = true }

# 工具
humantime = { workspace = true }
async-trait = { workspace = true }

# 加密
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# 基础组件
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
reqwest = { workspace = true }
