[package]
name = "nebula-code-review"
version = "0.1.0"
edition = "2021"
description = "Multi-agent code review system for Nebula ID"
authors = ["Nebula ID Team"]

[[bin]]
name = "nebula-code-review"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
thiserror = "1.0"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_fs = "1.0"
tempfile = "3.0"
